--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -23,8 +23,8 @@ spring:
       client:
         registration:
           google:
-            client-id: 
-            client-secret: 
+            client-id: 270510495513-k3fh9n0e6lq36hq6h84h0m782biiaj9u.apps.googleusercontent.com
+            client-secret: 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
             scope:
               - openid
               - profile
